fixed whitespace issue

--- a/frontend/src/app/wallet/wallet.component.scss
+++ b/frontend/src/app/wallet/wallet.component.scss
@@ -5,3 +5,7 @@ mat-card {
 mat-form-field {
   width: 100%;
 }
+
+.my-translated-paragraph {
+  white-space: pre-wrap;
+}
